some updates with extra test cases